# prism-suite-contour

./: CHANGELOG.md  Cargo.toml  PLAN.md  README.md  RESEARCH.md
crates/contour-app/: Cargo.toml
crates/contour-app/src/: align.rs  app.rs  appearance.rs  arrange.rs  artboard.rs  blend.rs  boolean.rs  canvas.rs  clip.rs  clipboard.rs  document.rs  effects.rs  export.rs  eyedropper.rs  fonts.rs  gradient.rs  graphic_styles.rs  group.rs  history.rs  icons.rs  layers.rs  liveshape.rs  main.rs  opacity_mask.rs  pathedit.rs  placed_image.rs  recolor.rs  shapebuilder.rs  snap.rs  stroke.rs  swatches.rs  symbols.rs  text.rs  theme.rs  trace.rs  transform.rs  workspace.rs
crates/contour-app/src/app/: edit.rs  inspector.rs  mod.rs  tools.rs
crates/contour-app/src/document/: mod.rs  path.rs  style.rs  tests.rs
