[package]
name = "contour-app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "contour"

[[bin]]
name = "contour"
path = "src/main.rs"

[dependencies]
prism-core.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true

serde_json = "1"
kurbo = "0.11"

# Software rasterizer for PNG export. 0.11 matches the version already present
# in the dependency graph (pulled transitively), avoiding a duplicate build.
tiny-skia = "0.11"

# Boolean polygon operations (Union/Intersect/Difference) for the Object menu.
i_overlay = "7"

# Glyph-outline extraction for the Type tool. The lightest crate that yields raw
# TrueType contours (move/line/quad/cubic) via an `OutlineBuilder`, which we map
# straight onto the document's path geometry so text composes / exports like any
# vector. Already present transitively (cosmic-text / fontdb), so no new build.
ttf-parser = "0.25"

# eframe with the default glow backend — Contour draws vectors through egui's
# painter, so no custom GPU pass is needed.
eframe = "0.34"
egui = "0.34"

# Native file save dialog.
rfd = "0.15"
egui-phosphor = "0.12.0"

[lints]
workspace = true
