[package]
name = "contour-app"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "contour"

[[bin]]
name = "contour"
path = "src/main.rs"

[dependencies]
prism-core.workspace = true
serde.workspace = true
log.workspace = true
env_logger.workspace = true
anyhow.workspace = true

serde_json = "1"
kurbo = "0.11"

# Software rasterizer for PNG export. 0.11 matches the version already present
# in the dependency graph (pulled transitively), avoiding a duplicate build.
tiny-skia = "0.11"

# Boolean polygon operations (Union/Intersect/Difference) for the Object menu.
i_overlay = "7"

# Glyph-outline extraction for the Type tool. The lightest crate that yields raw
# TrueType contours (move/line/quad/cubic) via an `OutlineBuilder`, which we map
# straight onto the document's path geometry so text composes / exports like any
# vector.
ttf-parser = "0.25"

# System font enumeration + family resolution for the Type tool's font picker.
# Pure-Rust, in-memory font database keyed by CSS-like family queries; built on
# the same `ttf-parser = 0.25` we already use (no extra parser in the graph). We
# only need filesystem enumeration + reading face bytes, so the heavier
# `memmap`/`fontconfig` default features are dropped.
fontdb = { version = "0.23", default-features = false, features = ["fs"] }

# eframe with the default glow backend — Contour draws vectors through egui's
# painter, so no custom GPU pass is needed.
eframe = "0.34"
egui = "0.34"

# Native file save dialog.
rfd = "0.15"
egui-phosphor = "0.12.0"

# Image Trace (Object ▸ Image Trace): raster → vector. `vtracer` clusters a
# raster into colour regions and fits cubic-spline outlines (the engine behind
# Illustrator's Image Trace); we parse its per-region SVG path output into the
# document's own path model. `visioncortex` is vtracer's geometry crate, pulled
# in directly so we can build its `ColorImage`/`PointF64` (vtracer only
# re-exports `ColorImage`) — same 0.8.10 already in the graph, no extra build.
# `image` decodes the picked raster to RGBA; default features dropped to the
# formats the file dialog offers.
vtracer = "0.6.5"
visioncortex = "0.8.10"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg", "bmp", "gif"] }

[lints]
workspace = true
